# Computer-Graphics-Project

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  OpenGLProgram.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  opengl_program.vcxproj  opengl_program.vcxproj.filters  stb.vcxproj  stb.vcxproj.filters
Debug/: opengl_program.exp
assets/: map_projet.fbx
glad.dir/Debug/: glad.lib.recipe
glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
images/: Knight_V2.glb  map_projet_collisions.glb  map_projet_visuel.glb
include/: box.h  camera.h  capsule.h  config.h  constants.h  crosshair.h  cylinder.h  enemy.h  enemySpawner.h  entityLoader.h  game.h  handlePhysics.h  main.h  map.h  mesh.h  model.h  node.h  physicObject.h  physicShapeObject.h  pickup.h  player.h  projectile.h  raycastResult.h  resourceManager.h  shader.h  shape.h  sphere.h  sprite.h  statsMenu.h  textRenderer.h  triangle.h  viewer.h
opengl_program.dir/Debug/: opengl_program.exe.recipe
opengl_program.dir/Debug/opengl_program.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
shaders/: crosshair.frag  crosshair.vert  node.frag  node.vert  player.frag  player.vert  sprite.frag  sprite.vert  standard.frag  standard.vert  text.frag  world.frag  world.vert
src/: camera.cpp  game.cpp  main.cpp  node.cpp  physicObject.cpp  physicShapeObject.cpp  viewer.cpp
src/physics/: handlePhysics.cpp
src/scene/: camera.cpp  enemy.cpp  enemySpawner.cpp  map.cpp  player.cpp  projectile.cpp
src/utils/: entityLoader.cpp  node.cpp  physicObject.cpp  physicShapeObject.cpp  pickup.cpp  resourceManager.cpp
src/utils/hud/: crosshair.cpp  sprite.cpp  statsMenu.cpp  textRenderer.cpp
src/utils/model/: mesh.cpp  model.cpp
src/utils/shapes/: box.cpp  capsule.cpp  cylinder.cpp  shape.cpp  sphere.cpp  triangle.cpp
stb.dir/Debug/stb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  stb.lastbuildstate
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
